// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Atoms/Checkbox CheckboxExample smoke-test 1`] = `
<div class="sc-jSwlEQ hPvNpH">
  <input type="checkbox"
         class="sc-eDnVMP jVxqso"
  >
</div>
<div class="sc-jSwlEQ hPvNpH">
  <input type="checkbox"
         class="sc-eDnVMP jVxqso"
         checked
  >
</div>
<div class="sc-jSwlEQ goTwgy">
  <input disabled
         type="checkbox"
         class="sc-eDnVMP jVxqso"
  >
</div>
<div class="sc-jSwlEQ goTwgy">
  <input disabled
         type="checkbox"
         class="sc-eDnVMP jVxqso"
         checked
  >
</div>
`;

exports[`Atoms/Checkbox CheckboxWithLabel smoke-test 1`] = `
<div class="sc-jSwlEQ hPvNpH">
  <input type="checkbox"
         class="sc-eDnVMP jVxqso"
  >
  <span>
    Checkbox with label
  </span>
</div>
<div class="sc-jSwlEQ goTwgy">
  <input disabled
         type="checkbox"
         class="sc-eDnVMP jVxqso"
  >
  <span>
    Checkbox with label
  </span>
</div>
`;
